# evolution-offline-store

./: INSTALL  README.org  guix.scm  meson.build  meson_options.txt
.guix/modules/: evolution-offline-store-package.scm
src/: e_hello_world.c  e_hello_world.h  evolution-offline-store.c  evolution_offline_store.c  m-mail-ui.c  m-shell-view-extension.c  m-shell-view-extension.h  m-utils.c  meson.build  org-gnome-evolution-offline-store.eplug.in  save_as_maildir_extension.c  save_as_maildir_extension.h
src/libemail-engine/: m-mail-folder-utils.c  m-mail-folder-utils.h
src/mail/: m-mail-reader-utils.c  m-mail-reader-utils.h
src/shell/: m-shell-utils.c  m-shell-utils.h
